--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -66,9 +66,13 @@ knitr::include_graphics(here::here("figure/coho-escapeSeries.png"))
 
 We consider two types of CU benchmark to represent CU status when developing LRPs for Interior Fraser Coho. 
 
-**1) Sgen**
+**Sgen**
 
-The first type is the WSP lower benchmark of  $S_{gen}$, where Sgen is the number of spawners required to recover to SMSY (spawners maximum sustainable yield) within one generation, under equilibrium conditions in the absence of fishing [@holt_indicators_2009]. Four different formulations of stock recruitment model are used to estimate Sgen based on previous analyses. Key differences among the formulations centre around whether a hierarchical model structure is used when estimating Sgen and whether an informative prior distribution is applied to the spawner abundance level at which the stock replaced itself (SRep).    
+The first type is the WSP lower benchmark of  $S_{gen}$, where Sgen is the number of spawners required to recover to SMSY (spawners maximum sustainable yield) within one generation, under equilibrium conditions in the absence of fishing [@holt_indicators_2009]. Four different formulations of stock recruitment model are used to estimate Sgen based on previous analyses. Key differences among the formulations centre around whether a hierarchical model structure is used when estimating Sgen and whether an informative prior distribution is applied to the spawner abundance level at which the stock replaced itself (SRep). 
+
+We primarily use the two model formulations that assume no hierarchical structure among CUs (IM and IM.cap) as a basis for comparing among LRP estimation methods, but have retained the two hierarchical model formulations (HM and HM.cap) for sensitivity analyses. Our rationale for focusing on the individual modelling approaches was two-fold.  First, because all CUs had equal amounts of data, the commonly cited benefit of hierarchical models allowing data-poor systems to borrow information from data-rich systems did not apply. Second, initial investigations of the hierarchical models fit to IF coho data showed that LRP estimates were sensitive to the choice of the assumed standard deviation on the hyper-distribution for the productivity parameter. 
+
+<!-- KH comment: # Need to update / finish the above paragraph by (i) reviewing meeting notes to confirm record of decision and (ii) adding references for typically cited benefits of hierarchical models -->
 
 
 *Model 1: Individual Ricker (IM)*
@@ -183,41 +187,75 @@ where, $W$ represents the Lambert W function (Scheurell 2016). $S_{gen}$ was the
 \end{equation}
 
 
-**2) Distribution among subpopulations**
+**Distribution among subpopulations**
 
-The second type of CU benchmark is based on the distribution of spawning escapement among subpopulations nested within CUs (Table \@ref(tab:cohoCU2SP)). We have taken it from the short-term recovery objective identified by the Interior Fraser Coho Recovery Team (2006). Arbeider et al. summarized that short-term recovery target as: "the 3-year geometric average, natural-origin escapement in at least half of the subpopulations within each of the five populations [CUs] is to exceed 1,000 spawning Coho Salmon, excluding hatchery fish spawning in the wild."  As noted by Arbeider et al. (2020), the short-term target was designed as an immediate target when the population was endangered; as such, it was interpreted as a level expected to prevent extinction or loss of genetic diversity. We therefore selected the short-term recovery target as a basis for a lower CU benchmark as opposed to the long-term recovery target. We set the lower distributional benchmark for each CU as at least half of the subpopulations within that CU having a 3-year geometric average escapement of 1000 spawners. When this threshold is met, a CU is considered to be above its lower benchmark. This distributional benchmark is specific to the Interior Fraser Coho SMU. We have retained it as part of this case study to maintain consistency with previous work.  
-
-
-
-### LRP Estimation
-
-#### Proportion of CUs > Sgen
-
-#### Logistic Regression LRP
-
-We evaluate two empirical (data-based) approaches for developing aggregate abundance-based LRPs for Interior Fraser Coho. Both approaches estimate LRPs by fitting logistic regression models to historically observed data; they differ in the metric used to represent CU-level status relative to CU-level lower benchmarks. 
-
-The first approach uses a distributional benchmark to characterize CU status, which is based on the short-term recovery target identified by the Interior Fraser Coho Recovery Team (2006). The recovery target is that “the 3-year geometric average, natural-origin escapement in at least half of the subpopulations within each of the five CUs exceeds 1,000 spawning Coho Salmon, excluding hatchery fish spawning in the wild”. Based on this target, CU status in a given year is quantified as the proportion of sub-populations with escapement above 1000 fish. The “half of sub-populations within each CU” threshold required 2 out of 3 sub-populations to be above 1000 fish for the North Thompson and South Thompson CUs, 1 out of 2 sub-populations to be above 1000-fish for the Lower Thompson and Middle Fraser CU, and the only sub-population in the Fraser Canyon to be above 1000 fish to satisfy this target. CU-level status based on these distributional benchmarks then gets rolled-up into an SMU-level LRP using a logistic regression analysis described in section x above. 
-
-- Still to add: 
-  - threshold p*?
+The second type of CU benchmark is based on the distribution of spawning escapement among subpopulations nested within CUs (Table \@ref(tab:cohoCU2SP)). We have taken it from the short-term recovery objective identified by the @ifcrt_interior_fraser_coho_recovery_team_conservation_2006. @arbedier_interior-2021 summarized that short-term target as: "the 3-year geometric average, natural-origin escapement in at least half of the subpopulations within each of the five populations is to exceed 1000 spawning Coho Salmon, excluding hatchery fish spawning in the wild", where 'populations' was analogous to CUs. We selected the short-term recovery target to represent a lower CU benchmark in our study because, as noted by @arbeider-interior-2020, the short-term target was designed as an immediate target when the population was endangered. As such, it was interpreted as a level expected to prevent extinction or loss of genetic diversity. The “half of sub-populations within each CU” threshold required 2 out of 3 sub-populations to be above 1000 fish for the North Thompson and South Thompson CUs to be above their lower benchmarks, 1 out of 2 sub-populations to be above 1000 fish for the Lower Thompson and Middle Fraser CUs to be above their lower benchmarks, and the only sub-population in the Fraser Canyon to be above 1000 fish to be above the lower benchmark.  This distributional benchmark is specific to the Interior Fraser Coho SMU. We have retained it as part of this case study to maintain consistency with previous work.  
 
 
-The second approach uses Sgen to characterize CU status.
-  - proportional vs. probability-based logistic regression?  threshold p*?
-  - logistic penalty used
+### LRP Estimation: Proportion of CUs > Lower Benchmark
 
 
-All four of the Sgen-LRP model options used an integrated modelling approach with two components to generate LRPs:
-(i)	Stock-recruit models fit to each of the 5 CUs to estimate CU-level Sgen (using equations xxx - xxx above)
-(ii)	A Bernoulli logistic regression model fit to aggregated data to estimate the LRP as the aggregate abundance that has historically been associated with all five CUs being above Sgen. 
+**Methods**
 
 
 
-### Projected LRP
+**Results**
+
+Figure 1: SR model fits - IM vs IM cap in 2020 (not in integrated model)
+
+Figure 1: CU-specific time series with estimated Sgen from IM and IM.cap model added on
+
+Figure 2: Sub-population time series with 1000 fish threshold added on
 
 
-### Evaluation of LRP Methods for IF Coho
+### LRP Estimation: Aggregate Abundance Empirical LRPs 
 
 
-## RESULTS
+**Methods**
+
+We evaluated aggregate abundance-based LRPs derived using logistic regressions for both types of Interior Fraser Coho benchmarks described above: 
+
+- Integrated model
+
+**Results**
+
+
+
+Figure 2: Logistic model fit - IM in 2020
+
+Figure 3: Logistic model fit - IM cap in 2020
+
+Figure 4: Logistic model fit - distribution
+
+Appendix: Maximum posterior density estimates (± standard error) obtained from fitting the ‘Individual Ricker’ (IM) version of the Integrated Sgen-LRP model to Interior Fraser Coho data.
+
+Appendix: Maximum posterior density estimates (± standard error) obtained from fitting the ‘Individual Ricker with cap’ (IM.cap) version of the Integrated Sgen-LRP model to Interior Fraser Coho data.
+
+Table: Comparison of all logistic LRP estimates in 2020
+
+### LRP Estimation: Aggregate Abundance Projection-Based LRPs
+
+
+**Methods**
+
+
+IM model
+
+IM cap model
+
+Model averaging 
+
+
+**Results**
+
+### Historical Evaluation of Status
+
+
+### Retrospective Analysis
+
+
+***Effect of LRP Estimation Method***
+
+***Effect of number of years***
+
+***Effect of number of CUs***
