--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -540,8 +540,6 @@
 	year = {2021},
 }
 
-
-
 @article{schnute_influence_1995,
 	title = {The influence of error on population estimates from catch-age models},
 	volume = {52},
@@ -556,4 +554,34 @@
 	month = oct,
 	year = {1995},
 	pages = {2063--2077},
+	file = {NRC Research Press PDF fulltext:C\:\\Users\\WarkentinL\\Zotero\\storage\\GQKHXCDD\\Schnute and Richards - 1995 - The influence of error on population estimates fro.pdf:application/pdf;NRC Research Press Snapshot:C\:\\Users\\WarkentinL\\Zotero\\storage\\I7CIKUKN\\f95-800.html:text/html},
+}
+
+@article{dfo_2017_2018,
+	title = {The 2017 {Fraser} {Sockeye} {Salmon} (\textit{{Oncorhynchus} nerka}) integrated biological status re-assessment under the {Wild} {Salmon} {Policy}},
+	abstract = {This SAR reports on the first re-assessment of biological status under the Wild Salmon Policy (WSP). This work was completed for 24 Fraser Sockeye Salmon Conservation Units (CUs) in 2017, which updates the previous statuses for these CUs (DFO 2012).},
+	language = {en},
+	author = {{DFO}},
+	year = {2018},
+	pages = {17},
+	file = {The 2017 Fraser Sockeye Salmon (Oncorhynchus nerka.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\CIX4WXHG\\The 2017 Fraser Sockeye Salmon (Oncorhynchus nerka.pdf:application/pdf},
+}
+
+@article{grant_2017_2020,
+	title = {The 2017 {Fraser} {Sockeye} {Salmon} ({Oncorhynchus} nerka) {Integrated} {Biological} {Status} {Re}-{Assessments} {Under} the {Wild} {Salmon} {Policy} {Using} {Standardized} {Metrics} and {Expert} {Judgment}},
+	language = {en},
+	author = {Grant, S C H and Holt, C A and Pestal, G and Davis, B M and MacDonald, B L},
+	year = {2020},
+	pages = {218},
+	file = {Grant et al. - The 2017 Fraser Sockeye Salmon (Oncorhynchus nerka.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\SU9UFFYK\\Grant et al. - The 2017 Fraser Sockeye Salmon (Oncorhynchus nerka.pdf:application/pdf},
+}
+
+@article{dfo_integrated_2016,
+	title = {Integrated {Biological} {Status} of {Southern} {British} {Columbia} {Chinook} {Salmon} (\textit{{Oncorhynchus} tshawytscha}) {Under} the {Wild} {Salmon} {Policy}},
+	abstract = {A workshop entitled “Assessment of Southern British Columbia Chinook Salmon Conservation Units, Benchmarks and Status” was conducted to determine an integrated Wild Salmon Policy (WSP) status for each of the 35 southern BC Chinook Salmon Conservation Units (CU). The status integration method used was similar to that applied to Fraser Sockeye (Grant \& Pestal 2013). A characteristic of southern BC Chinook Salmon CUs that is distinct from the Sockeye Salmon CUs assessed so far is the significant presence of hatchery-origin fish in addition to wild-origin fish in many of the CU area/watersheds.},
+	language = {en},
+	author = {{DFO}},
+	year = {2016},
+	pages = {15},
+	file = {Integrated Biological Status of Southern British C.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\6LUF649R\\Integrated Biological Status of Southern British C.pdf:application/pdf},
 }
